--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -47,25 +47,25 @@
         <h3>Comment ça marche ?</h3>
         <br>
         <div class="col-xs-6 col-md-3">
-          <div class="card">
+          <div class="card round_icons">
             <%= image_tag "calendar2.svg", size: "100", class: "" %>
             <h5><strong>1.</strong> Déclarez vos disponibilités sur le calendrier intelligent</h5>
           </div>
         </div>
         <div class="col-xs-6 col-md-3">
-          <div class="card">
+          <div class="card round_icons">
             <%= image_tag "doctor2.svg", size: "100", class: "" %>
             <h5><strong>2.</strong> Choisissez le cabinet ou le remplaçant qui vous convient</h5>
           </div>
         </div>
         <div class="col-xs-6 col-md-3">
-          <div class="card">
+          <div class="card round_icons">
             <%= image_tag "switch2.svg", size: "100", class: "" %>
             <h5><strong>3.</strong> Échangez aisément depuis la plateforme</h5>
           </div>
         </div>
         <div class="col-xs-6 col-md-3">
-          <div class="card">
+          <div class="card round_icons">
             <%= image_tag "stethoscope2.svg", size: "100", class: "" %>
             <h5><strong>4.</strong> Donnez votre feedback à la fin de la prestation</h5>
           </div>
@@ -76,23 +76,23 @@
 </div>
 
 <div class="container">
-  <div class="row">
+  <div class="row medias">
     <div class="text-center">
       <h3>Ils parlent de nous :</h3>
       <br>
-      <div class="col-xs-6 col-sm-2 col-sm-offset-2">
+      <div class="col-xs-6 col-sm-2 col-sm-offset-2 ">
         <%= image_tag "le_wagon.png", class: "img-responsive"%>
       </div>
-      <div class="col-xs-6 col-sm-2">
+      <div class="col-xs-6 col-sm-2 ">
         <%= image_tag "jdn.png", class: "img-responsive" %>
       </div>
 <!--       <div class="col-xs-6 col-sm-2">
         <%= image_tag "paris-sud.png", class: "img-responsive"%>
       </div> -->
-      <div class="col-xs-6 col-sm-2">
+      <div class="col-xs-6 col-sm-2 ">
         <%= image_tag "lemonde.png", class: "img-responsive"%>
       </div>
-      <div class="col-xs-6 col-sm-2" style=" padding-left: 20px;">
+      <div class="col-xs-6 col-sm-2 " style=" padding-left: 20px;">
         <%= image_tag "le_quotidien.png", class: "img-responsive"%>
       </div>
     </div>
