--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -62,8 +62,8 @@ hr {
 // Cards in home page
 .card {
   border-radius: 7px;
-  width: 190px;
-  height: 200px;
+  // width: 190px;
+  // height: 200px;
   // border: 1px solid rgba(0, 0, 0, 0.1);
 }
 
