--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -49,3 +49,11 @@
   outline: 0;
   outline-offset: 0;
 }
+.medias {
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+.round_icons{
+  padding-top: 22px;
+  padding-bottom: 22px;
+}
