--- a/app/views/calendars/show.html.erb
+++ b/app/views/calendars/show.html.erb
@@ -60,7 +60,7 @@
         <% if current_user.slots.first.nil? %>
           <h5> Vous n'avez pas encore reçu de demande <br> Commencez par remplir votre calendrier ci-dessus et valider vos plages</h5>
         <% else %>
-          <% current_user.slots.each do |slot| %>
+          <% current_user.slots.order(created_at: :desc).each do |slot| %>
 
             <% slot.bookings.order(created_at: :asc).each do |booking| %>
             <div class="requests">
