--- a/app/assets/stylesheets/layout/_form.scss
+++ b/app/assets/stylesheets/layout/_form.scss
@@ -1,5 +1,6 @@
 .form-design {
-  margin-top: 100px;
+  margin-top: 50px;
+  margin-bottom: 50px;
   padding: 10px 15px;
   border-radius: 10px;
   box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1); /* Subtle shadow */
