--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -5,8 +5,7 @@
         <h2>Inscription</h2>
       </div>
         <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-          <%= f.error_notification %>
-
+          <%#= f.error_notification %>
           <div class="form-inputs">
             <%= f.input :first_name, required: true %>
             <%= f.input :last_name, required: true %>
@@ -15,12 +14,12 @@
             <%= f.input :password, required: true, hint: ("#{@minimum_password_length} caractères minimum" if @minimum_password_length) %>
             <%= f.input :password_confirmation, required: true %>
           </div>
-
+          <br>
           <div class="form-actions text-center">
-            <%= f.button :submit, "S'inscrire", :class => 'btn btn-primary', style: "width: 100%;" %>
+            <%= f.button :submit, "S'inscrire", :class => 'btn btn-primary', style: "width: 100%; margin-bottom: 10px;" %>
           </div>
-
         <% end %>
+
         <%= render "devise/shared/links" %>
     </div>
   </div>
