--- a/app/assets/stylesheets/pages/_calendar.scss
+++ b/app/assets/stylesheets/pages/_calendar.scss
@@ -3,7 +3,10 @@
 }
 .call-to-action{
   padding-top: 20px;
-  padding-bottom: 70px;
+  padding-bottom: 30px;
+}
+.availabilities, .incoming_demands, .outcoming_demands {
+  min-height: 204px;
 }
 .demands{
   width: 100%;
@@ -26,13 +29,8 @@
     padding: 10px;
     }
     h4{
-    margin-bottom: 25px;
     min-height: 44px;
     }
-}
-.incoming_demands{
-  border-right: 1px solid rgba(51, 51, 51, 0.07);
-  border-left: 1px solid rgba(51, 51, 51, 0.07);
 }
 .fa-calendar-minus-o{
    font-size: 40px;
@@ -53,13 +51,67 @@
   font-weight: lighter;
   margin: 0px 230px;
 }
+
+
+.myslots {
+  position: relative;
+  background-color: white;
+  box-shadow: 0 1px 5px 0 rgba(0,0,0,0.07),0 1px 0 0 rgba(0,0,0,0.03);
+  border-radius: 3px;
+  padding: 10px;
+  p {
+    font-size: 13px;
+    color: $gray;
+    margin-bottom: 0;
+  }
+  margin-bottom: 15px;
+}
+.delete-gray {
+  position: absolute;
+  top: -7px;
+  right: -7px;
+  font-size: 10px;
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 18px;
+  width: 18px;
+  text-align: center;
+  box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  background-color: $gray-medium;
+  a {
+    font-weight: bold;
+    color: white;
+  }
+}
+.border-between > [class*='col-']:before,
+.border-between > [class*='col-']:after {
+    background: #b2b2b2;
+    bottom: 0;
+    content: " ";
+    position: absolute;
+    width: 1px;
+    top: 0;
+}
+.border-between > [class*='col-']:before {
+    left: 0;
+}
+.border-between > [class*='col-']:after {
+    right: -1px;
+}
+.border-between > [class*='col-']:first-child:before,
+.border-between > [class*='col-']:last-child:after {
+    display: none;
+}
 .requests{
   background-color: white;
   box-shadow: 0 1px 5px 0 rgba(0,0,0,0.07),0 1px 0 0 rgba(0,0,0,0.03);
-  border-radius: 5px;
+  border-radius: 3px;
   padding: 10px;
-  margin: 20px;
   min-height: 130px;
+  margin-bottom: 15px;
 }
 .request-head {
   display: flex;
