--- a/app/assets/stylesheets/components/_avatars.scss
+++ b/app/assets/stylesheets/components/_avatars.scss
@@ -36,3 +36,11 @@
   box-shadow: 0 1px 2px rgba(0,0,0,0.2);
   border: white 1px solid;
 }
+.avatar-square-small {
+  width: 32px;
+  border-radius: 0px;
+}
+.avatar-square-big {
+  width: 64px;
+  border-radius: 0px;
+}
