--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -67,7 +67,7 @@
                 <li><i class="fa fa-fw fa-home icon-profile"></i><p><%= human_housing(@user.housing) %></p></li>
                 <li>
                   <i class="fa fa-fw fa-money icon-profile"></i>
-                  <p id="p-comm">Rétrocommission souhaitée :</p>
+                  <p id="p-comm">Versement souhaitée :</p>
                   <div class="small-comm-tag"><%= @user.commission %>%</div>
                 </li>
               <% else %>
@@ -85,7 +85,7 @@
                 </li>
                 <li>
                   <i class="fa fa-fw fa-money icon-profile"></i>
-                  <p id="p-comm">Rétrocommission minimale souhaitée :</p>
+                  <p id="p-comm">Versement minimale souhaitée :</p>
                   <div class="small-comm-tag"><%= @user.min_commission %>%</div>
                 </li>
               <% end %>
