Renamed speciality values to remove special characters

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -29,9 +29,9 @@
           <input type="text" class="search-input" placeholder="Lyon" name="location" id="user_input_autocomplete_address">
           <label for="formGroupInputSmall">en</label>
           <select class="search-input select-height" placeholder="Médecine générale" name="speciality">
-            <option value="Médecine générale">Médecine générale</option>
-            <option value="Kinésithérapie">Kinésithérapie</option>
-            <option value="Autre spécialité">Autre spécialité</option>
+            <option value="medg">Médecine générale</option>
+            <option value="kine">Kinésithérapie</option>
+            <option value="otherspe">Autre spécialité</option>
           </select>
           <input type="hidden" name="unrated" value="true">
           <button type="submit" class="btn btn-primary btn-search-home"><i class="fa fa-search"></i></button>
