--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -17,6 +17,11 @@
         <i class="fa fa-fw fa-search"></i>
         <%= @user.has_practice ? raw("A la recherche de <strong>remplaçants</strong>") : raw("A la recherche de <strong>remplacements</strong>") %>
       </h5>
+      <% if current_user == @user %>
+        <div class="text-center">
+        <%= link_to "Modifier mon profil", edit_user_path(current_user), :class => "btn btn-primary btn-search-home user-edit-button " %>
+      </div>
+    <% end %>
     </div>
     <hr>
   </div>
@@ -97,7 +102,7 @@
         <div class="col-xs-12">
           <h4>Présentation :</h4>
           <% if @user.presentation.nil? %>
-          <p> Editez votre profil pour rédiger votre présentation et obtenir jusqu'à 80% de résultats en plus.</p>
+          <p> Pas encore renseigné. </p>
           <% else %>
           <p><%= @user.presentation %></p>
           <%end%>
@@ -105,7 +110,7 @@
 
           <h4>Cursus et publications :</h4>
           <% if @user.publications.nil? %>
-          <p> Editez votre profil pour renseigner vos publications.</p>
+          <p> Pas encore renseigné.</p>
           <% else %>
           <p><%= @user.publications %></p>
           <% end %>
@@ -114,7 +119,7 @@
 
         <div class="location">
           <div class="card-acces col-xs-12 col-md-12">
-            <h4>Informations d'accès :</h4>
+            <h4>Localisation du cabinet :</h4>
             <p><%= @user.address %></p>
           </div>
           <div id="map-user" style="; height: 200px;" class="hidden-xs col-md-12">
@@ -139,37 +144,39 @@
 
       <div class="slots_reviews col-sm-4">
         <div class="col-xs-12">
-          <div class="user_availabilities">
-          <h4>Choisissez un créneau de remplacement</h4>
-          <hr>
-          <% if @user.slots.first.nil? %>
-            <div class="">
-              <p>Ce docteur n'a pas encore défini de créneau.</p>
-            </div>
-          <%else%>
-              <% @user.slots.each do |slot| %>
-                <ul class="list-inline list-unstyled text-center">
-                  <% if slot.status == "pending" && slot.end_date > Date.today %>
-                    <% if current_user.numero_ordre.nil? %>
-                      <ul class="list-unstyled">
+          <% if current_user != @user %>
+            <div class="user_availabilities">
+            <h4>Choisissez un créneau de remplacement</h4>
+            <hr>
+            <% if @user.slots.first.nil? %>
+              <div class="">
+                <p>Aucun créneau défini pour le moment.</p>
+              </div>
+            <%else%>
+                <% @user.slots.each do |slot| %>
+                  <ul class="list-inline list-unstyled text-center">
+                    <% if slot.status == "pending" && slot.end_date > Date.today %>
+                      <% if current_user.numero_ordre.nil? %>
+                        <ul class="list-unstyled">
 
-                        <li class= "single_dispo"><i class="fa fa-fw fa-calendar-plus-o"></i><%= link_to " #{l(slot.start_date, format: "%e %B %Y")} au #{l(slot.end_date, format: "%e %B %Y")}", user_bookings_path(@user, booking: { user_id: current_user.id,slot_id: slot.id, start_date: slot.start_date, end_date: slot.end_date }), data: {toggle: "modal", target: "#contacter"}%>
+                          <li class= "single_dispo"><i class="fa fa-fw fa-calendar-plus-o"></i><%= link_to " #{l(slot.start_date, format: "%e %B %Y")} au #{l(slot.end_date, format: "%e %B %Y")}", user_bookings_path(@user, booking: { user_id: current_user.id,slot_id: slot.id, start_date: slot.start_date, end_date: slot.end_date }), data: {toggle: "modal", target: "#contacter"}%>
 
-                        </li>
-                      </ul>
-                    <% else %>
-                      <ul class="list-unstyled">
+                          </li>
+                        </ul>
+                      <% else %>
+                        <ul class="list-unstyled">
 
-                        <li class= "single_dispo"><i class="fa fa-fw fa-calendar-plus-o"></i><%= link_to " #{l(slot.start_date, format: "%e %B %Y")} au #{l(slot.end_date, format: "%e %B %Y")}", user_bookings_path(@user, booking: { user_id: current_user.id, slot_id: slot.id, start_date: slot.start_date, end_date: slot.end_date }), method: :post, data: { confirm: "Etes-vous sûr(e) ?" }, class: "" %>
+                          <li class= "single_dispo"><i class="fa fa-fw fa-calendar-plus-o"></i><%= link_to " #{l(slot.start_date, format: "%e %B %Y")} au #{l(slot.end_date, format: "%e %B %Y")}", user_bookings_path(@user, booking: { user_id: current_user.id, slot_id: slot.id, start_date: slot.start_date, end_date: slot.end_date }), method: :post, data: { confirm: "Etes-vous sûr(e) ?" }, class: "" %>
 
-                        </li>
-                      </ul>
+                          </li>
+                        </ul>
+                      <% end %>
                     <% end %>
-                  <% end %>
-                </ul>
+                  </ul>
+                <% end %>
               <% end %>
+              </div>
             <% end %>
-            </div>
         </div>
         <div class="col-xs-12">
           <div class="myprofile-reviews">
@@ -192,7 +199,7 @@
               <% end %>
             <% else %>
             <div class="empty-comment">
-              <p>Ce docteur n'a pas encore reçu d'avis.</p>
+              <p>Aucun avis reçus pour le moment.</p>
             </div>
             <% end %>
           </div>
